[package]
name = "rtracy"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "=2.0.0-rc.3"
lz4 = "1.28.1"
num-traits = "0.2.19"
num-derive = "0.4.2"
clap = { version = "4.5.34", features = ["derive"] }
